--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,6 @@ display: inline-block;
     max-width:950px;
     background: #cccccc;
     height: 2000px;
-    margin: auto;
     margin-top: 8px;
     margin:10px auto;
     padding:10px;
@@ -40,4 +39,16 @@ display: inline-block;
 }
 #footer{
 
+}
+
+#profPicture{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 250px;
+    height: 250px;
+}
+.circle {
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
 }
