--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,20 @@
-html{font-family: sans-serif;
+html{
+  font-family: sans-serif;
+  height:100%;/* make sure it is at least as tall as the viewport */
+  position:relative;
+
 }
 body{
   margin:0px;
+  height:100%;
 }
+
 #all{
+    height:100%;
     margin:0px;
     background:#404040;
     overflow:hidden;
+
 
 }
 
@@ -28,10 +36,11 @@ display: inline-block;
 }
 
 #content{
+  border-radius: 25px;
     width:100%;
     max-width:950px;
     background: #cccccc;
-    height: 2000px;
+    height: 600px;
     margin-top: 8px;
     margin:10px auto;
     padding:10px;
